--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <div id="container">
     <h1>Mafia Host</h1>
 
+    <!-- Initial menu for hosting/joining -->
     <div id="menu">
         <button id="btnHost">Host Game</button><br>
         <input type="text" placeholder="Game ID" id="gameInput">
@@ -17,21 +18,26 @@
         <button id="btnJoin">Join Game</button>
     </div>
 
+    <!-- Host Controls Section -->
     <div id="hostControls" style="display:none;">
         <p>Game ID: <span id="gameId"></span></p>
         <ul id="playerList"></ul>
 
         <button id="btnStartNight">Start Night</button>
-        <select id="mafiaTarget"></select><button id="btnMafiaKill">Confirm Mafia Kill</button>
+        <select id="mafiaTarget"></select>
+        <button id="btnMafiaKill">Confirm Mafia Kill</button>
         <br>
-        <select id="doctorTarget"></select><button id="btnDoctorSave">Confirm Doctor Save</button>
+        <select id="doctorTarget"></select>
+        <button id="btnDoctorSave">Confirm Doctor Save</button>
         <br>
         <button id="btnStartDay">Start Day</button>
-        <select id="voteTarget"></select><button id="btnVoteElim">Confirm Vote</button>
+        <select id="voteTarget"></select>
+        <button id="btnVoteElim">Confirm Vote</button>
         <br>
         <button id="btnEndGame" style="background-color:red;color:white;">End Game</button>
     </div>
 
+    <!-- Player UI (role view) -->
     <div id="playerUI" style="display:none;">
         <div id="roleBox" class="messageBox">
             <span id="roleMsg"></span>
@@ -39,6 +45,32 @@
         </div>
         <p id="joinStatus"></p>
     </div>
+</div>
+
+<!-- ✅ Message Box Overlay -->
+<div id="messageBox" style="display:none;
+    position:fixed;
+    top:0;left:0;width:100%;height:100%;
+    background:rgba(0,0,0,0.5);
+    justify-content:center;
+    align-items:center;
+    z-index:1000;">
+  <div style="background:white;
+      padding:20px;
+      border-radius:12px;
+      text-align:center;
+      width:80%;
+      max-width:300px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.3);">
+    <p id="messageText" style="margin-bottom:16px;font-size:16px;color:#333;"></p>
+    <button onclick="closeMessage()" 
+            style="padding:8px 16px;
+            border:none;
+            background:#4CAF50;
+            color:white;
+            border-radius:8px;
+            font-size:15px;">Close</button>
+  </div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
